[package]
name = "crypto-learner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.7"
rsa = "0.5"
rand = "0.8"
base64 = "0.13"
wasm-bindgen = "0.2"
pkcs1 = { version = "0.3", features = ["alloc"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]
